CHORE: update .gitignore to include theme-codebase.txt and package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ assets/css/serinity.css.map
 assets/js/serinity.js
 assets/js/serinity.js.map
 theme-codebase.txt
+blocks/package-lock.json
+package-lock.json
